RESOLVED FIXED38849
REGRESSION (r59016): plugins/set-status.html fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=38849
Summary REGRESSION (r59016): plugins/set-status.html fails on Windows
Adam Roben (:aroben)
Reported 2010-05-10 09:05:55 PDT
REGRESSION (r59016): plugins/set-status.html fails on Windows
Attachments
Patch (5.05 KB, patch)
2010-05-10 09:09 PDT, Adam Roben (:aroben)
ap: review+
Adam Roben (:aroben)
Comment 1 2010-05-10 09:09:35 PDT
Alexey Proskuryakov
Comment 2 2010-05-10 10:12:24 PDT
Comment on attachment 55558 [details] Patch r=me, because this DRT-only fix can't be wrong, but I don't understand what happened here. Why did %S truncate the text, isn't it supposed to work for UTF-16? For double safety you may want to check what happens in Safari - is the status text set to what we expect it to?
Adam Roben (:aroben)
Comment 3 2010-05-13 09:21:25 PDT
(In reply to comment #2) > (From update of attachment 55558 [details]) > r=me, because this DRT-only fix can't be wrong, but I don't understand what happened here. Why did %S truncate the text, isn't it supposed to work for UTF-16? I did a little more debugging. %S does "work" for UTF-16. But it converts the input string to a non-wide string using wctomb, which uses the codepage for the current locale. The conversion is failing, which causes printf to bail. I'll add this information to the ChangeLog. > For double safety you may want to check what happens in Safari - is the status text set to what we expect it to? Yes, Safari works as expected. Thanks for the review!
Adam Roben (:aroben)
Comment 4 2010-05-13 10:10:56 PDT
Note You need to log in before you can comment on or make changes to this bug.